2007-03-27  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Cross-reference 'set datafile fortran'.

2007-03-25  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* demo/histograms.dem: Add message to 'pause -1'.

	* src/wxterminal/gp_cairo.c
	(gp_cairo_draw_text, gp_cairo_draw_enhanced_text): Clear the path after
	drawing a text layout since pango does not do it by itself. This is a
	bug-fix for spurious 0-width lines that appear when a cairo-based
	terminal is used to generate pdf files, this bug does not appear in
	wxt.

	* src/wxterminal/gp_cairo.c: Fix and complete debugging messages.

2007-03-21 Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graphics.c (boundary): The change of 2007-02-25 overlooked the
	2D plots having palettes that also required setup_tics(COLOR_AXIS,).
	Bug #1684789

2007-03-16 Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/winmain.c (appdata_directory): Prevent segfault if no
	directory is given and the environmental variable APPDATA is not set.

2007-03-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox):  Fix bug that caused axis labels
	not to be drawn in 'set view map' mode.

2007-03-13  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* demo/transparent.dem: Add messages to 'pause -1' commands to avoid
	guessing that gnuplot is taking a lot of time to plot while it is just
	waiting for user input.

2007-03-11  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in:
	* INSTALL:
	Report mouse support in the features section, not as an option of the
	x11 terminal, since it is in fact true for other interactive terminals
	such as wxt or vgagl.

2007-03-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline df_generate_pseudodata df_open df_gets):
	Implement a function-plotting mode that allows 'using' options.
	'+' is a pseudo-file that in 2D plots returns a stream of <samples>
	values corresponding to x coordinates within the current xrange,